Tmux switch on `prefix w`.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -13,7 +13,8 @@ tmux_conf_copy_to_os_clipboard=true
 # key bindings
 set-window-option -g mode-keys vi
 bind        -T prefix q display-panes -d 0
-bind-key    -T prefix w choose-session
+bind-key    -T prefix w display-popup -E "tmux list-sessions -F '#S' | sk --reverse --prompt 'session:' --header 'Available sessions' | xargs tmux switch-client -t"
+bind-key    -T prefix W choose-session
 bind-key    -T prefix Space new-window
 bind-key    -T prefix c select-pane -L
 bind-key    -T prefix t select-pane -D
@@ -21,7 +22,6 @@ bind-key    -T prefix s select-pane -U
 bind-key    -T prefix r select-pane -R
 bind-key    -T prefix o split-wind
 bind-key    -T prefix v split-window -h
-bind-key    -T prefix f display-popup -E "tmux attach -t popup || tmux new -s popup"
 bind-key    -T prefix j menu -T Notes Capture c "popup -ET Capture 'kak -e kak-notes-capture'" Journal j "popup -w 75% -h 75% -ET 'Journal' 'kak -e kak-notes-journal-open-daily'"
 bind-key -r -T prefix M-s resize-pane -U 5
 bind-key -r -T prefix M-t resize-pane -D 5
