--- a/aerc/aerc.conf
+++ b/aerc/aerc.conf
@@ -14,7 +14,7 @@
 # keyring already exists, in which case the latter will be used.
 #
 # Default: auto
-#pgp-provider=auto
+pgp-provider="gpg"
 
 # By default, the file permissions of accounts.conf must be restrictive and
 # only allow reading by the file owner (0600). Set this option to true to
@@ -41,7 +41,7 @@
 # Set the $TERM environment variable used for the embedded terminal.
 #
 # Default: xterm-256color
-#term=xterm-256color
+term=alacritty
 
 # Display OSC8 strings in the embedded terminal
 #
@@ -61,7 +61,7 @@
 #   default-menu-cmd=dmenu -l 20
 #   default-menu-cmd=ranger --choosefiles=%f
 #
-#default-menu-cmd=
+default-menu-cmd=sk
 
 [ui]
 #
@@ -238,13 +238,13 @@
 # Uncomment to use box-drawing characters for vertical and horizontal borders.
 #
 # Default: " "
-#border-char-vertical=" "
-#border-char-horizontal=" "
+border-char-vertical="│"
+border-char-horizontal="─"
 
 # Sets the styleset to use for the aerc ui elements.
 #
 # Default: default
-#styleset-name=default
+styleset-name=catppuccin-macchiato
 
 # Activates fuzzy search in commands and their arguments: the typed string is
 # searched in the command or option in any position, and need not be
