--- a/aerc/binds.conf
+++ b/aerc/binds.conf
@@ -14,7 +14,7 @@
 <C-z> = :suspend<Enter>
 
 [messages]
-q = :prompt 'Quit?' quit<Enter>
+q = :quit<Enter>
 
 j = :next<Enter>
 <Down> = :next<Enter>
