Update aerc binds.

--- a/aerc/binds.conf
+++ b/aerc/binds.conf
@@ -16,13 +16,13 @@
 [messages]
 q = :quit<Enter>
 
-j = :next<Enter>
+t = :next<Enter>
 <Down> = :next<Enter>
 <C-d> = :next 50%<Enter>
 <C-f> = :next 100%<Enter>
 <PgDn> = :next 100%<Enter>
 
-k = :prev<Enter>
+s = :prev<Enter>
 <Up> = :prev<Enter>
 <C-u> = :prev 50%<Enter>
 <C-b> = :prev 100%<Enter>
@@ -30,20 +30,20 @@ k = :prev<Enter>
 g = :select 0<Enter>
 G = :select -1<Enter>
 
-J = :next-folder<Enter>
+T = :next-folder<Enter>
 <C-Down> = :next-folder<Enter>
-K = :prev-folder<Enter>
+S = :prev-folder<Enter>
 <C-Up> = :prev-folder<Enter>
-H = :collapse-folder<Enter>
+C = :collapse-folder<Enter>
 <C-Left> = :collapse-folder<Enter>
-L = :expand-folder<Enter>
+N = :expand-folder<Enter>
 <C-Right> = :expand-folder<Enter>
 
 v = :mark -t<Enter>
 <Space> = :mark -t<Enter>:next<Enter>
 V = :mark -v<Enter>
 
-T = :toggle-threads<Enter>
+J = :toggle-threads<Enter>
 zc = :fold<Enter>
 zo = :unfold<Enter>
 za = :fold -t<Enter>
@@ -57,7 +57,7 @@ D = :delete<Enter>
 a = :archive flat<Enter>
 A = :unmark -a<Enter>:mark -T<Enter>:archive flat<Enter>
 
-C = :compose<Enter>
+#C = :compose<Enter>
 m = :compose<Enter>
 
 rr = :reply -a<Enter>
@@ -76,8 +76,8 @@ n = :next-result<Enter>
 N = :prev-result<Enter>
 <Esc> = :clear<Enter>
 
-s = :split<Enter>
-S = :vsplit<Enter>
+k = :split<Enter>
+K = :vsplit<Enter>
 
 pl = :patch list<Enter>
 pa = :patch apply <Tab>
@@ -107,14 +107,14 @@ rq = :reply -aq<Enter>
 Rr = :reply<Enter>
 Rq = :reply -q<Enter>
 
-H = :toggle-headers<Enter>
+#H = :toggle-headers<Enter>
 <C-k> = :prev-part<Enter>
 <C-Up> = :prev-part<Enter>
 <C-j> = :next-part<Enter>
 <C-Down> = :next-part<Enter>
-J = :next<Enter>
+T = :next<Enter>
 <C-Right> = :next<Enter>
-K = :prev<Enter>
+S = :prev<Enter>
 <C-Left> = :prev<Enter>
 
 [view::passthrough]
