--- a/aerc/accounts.conf
+++ b/aerc/accounts.conf
@@ -3,7 +3,7 @@ check-mail = 5m
 check-mail-cmd = mbsync hadronized
 check-mail-timeout = 1m
 source   = maildir://~/mail/hadronized
-outgoing = smtps://hadronized%40strongly-typed-thoughts.net@ssl0.ovh.net:465
+outgoing = msmtp -a primary
 outgoing-cred-cmd = pass hadronized@strongly-typed-thoughts.net
 default  = Inbox
 from     = "Dimitri Sabadie" <hadronized@strongly-typed-thoughts.net>
